RAjout de la craeation d'utilisateurs

--- a/client/utilisateurs/utilisateurs_list.html
+++ b/client/utilisateurs/utilisateurs_list.html
@@ -1,10 +1,9 @@
-<!-- /client/views/teams.html -->
 
 <template name="utilisateursList">
 <h3>Utilisateurs</h3>
 <ul>
 	{{#each utilisateurs}}
-	<li>{{name}}</li>
+	<li><a href="{{ pathFor "utilisateurPage" }}">{{name}}</a></li>
 	{{/each}}
 </ul>
 </template>
